# umpof

./: .gitignore  Cases.md  GeneralConcept.md  LICENSE  build  dependenices.txt  find_todo.py  test.run  test_build
butler/: butler.py  server.py
defpack/: pack.json
defpack/casts/: itt.py
defpack/emits/: emit_int.py  emit_text.py
defpack/ops/: ints_op.py
defpack/targets/: sfout.py
defpacks/defpack/: pack.json
defpacks/defpack/bufs/: sbuf.py  tbuf.py
defpacks/defpack/casts/: bti.py  btt.py  itb.py  ttb.py  tti.py
defpacks/defpack/emits/: emit_float.py  emit_string.py
defpacks/defpack/ops/: ints_op.py
defpacks/fworks/: pack.json
exec/umpof/: .gitignore  build.gradle  build.sh  settings.gradle  test.ppl  test_args.txt
exec/umpof/test/: .ppl
front/: comm.js  comp.js  ctx.js  dwindow.js  fcfg.py  gevs.js  index.html  project.js  server.py
prod_server/: WeAreSorry.txt  cmpf  extra_cleanup.sh  prod_server.py  server.py
prod_server/b3409669-f87f-4007-900c-f72f6dac18f7/: .ppl
prod_server/compiler/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  side notes.md
prod_server/compiler/src/: comp_seq.cpp  compiler.cpp  compiler.h  compiler_logging.cpp  macro_defs.h  main.cpp  nodeworks.cpp  nodeworks.h  pack_proc.cpp  packs.cpp  packs.h  pl_block.cpp  pl_gen.cpp  pl_gen.h  setups.cpp  setups.h
pympofl/: em_consts.py  emulate_server.py  emulate_test.py  get_deps.sh  install.bat  install.sh  redis_inner.md  rpart.py  test-script.py
pympofl/pympofl/: __init__.py  inst_cfg.py  uniform.py
temps/: test.html
upck/: pack.jsonc
(+32 files in other folders)
